fixed responsiveness on small screens

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -345,6 +345,10 @@ a .resourcelink{
     margin-left:0px !important;
 }
 
+.aboutus-images {
+    height: 250px;
+}
+
   @media only screen and (max-width:900px) {
   .navbar li a, .companylogo{
     font-size:90%;
@@ -361,7 +365,19 @@ a .resourcelink{
         margin-left: 5%;
         margin-right: 5%;
     }
-  }
+    .aboutus-firstsection img, .aboutus-secondsection img{
+        margin-top:20px !important;
+        text-align:center;
+    }
+    .aboutus-firstsection p, .aboutus-secondsection p, .aboutus-firstsection span, .aboutus-secondsection span{
+        margin-top:10px !important;
+        font-size:120%;
+    }
+    .who-we-are{
+        margin-left:5%;
+        margin-right:5%;
+        max-width:140ch;
+    }
 
   /*Small phones to small tablets - from 481 to 767 px  */
   
@@ -383,7 +399,41 @@ a .resourcelink{
     .col-newresource-label {
         text-align: center;
     }
-  }
+    .register-section, .login-section, .flashmessage{
+        margin-left:10%;
+        margin-right: 10%;
+    }
+
+    h3 .homepage-title{
+        font-size:120%;
+    }
+
+    .search_img{
+        margin-bottom:30px !important;
+    }
+
+    .copyright{
+        font-size:110%;
+    }
+
+    .aboutus-firstsection p, .aboutus-secondsection p, .aboutus-firstsection span, .aboutus-secondsection span, .who-we-are, .aboutus-thirdsection span{
+        margin-top:10px !important;
+        font-size:100%;
+    }
+
+    .textsection-title{
+        font-size:140%;
+    }
+
+    .who-we-are{
+        margin-left:5%;
+        margin-right:5%;
+        max-width:140ch;
+    }
+
+    .aboutus-images {
+        height: 70%;
+    }
     
   /*Small phones - from 0 to 480 px  */
   @media only screen and (max-width:480px) {
@@ -396,4 +446,7 @@ a .resourcelink{
   
   @media only screen and (max-width:430px) {} */
 
-}}
+}
+}
+}
+}
